[gd_scene load_steps=6 format=3 uid="uid://ds5wba0klgjum"]

[ext_resource type="Script" uid="uid://cwikyltdu6bby" path="res://scripts/hud.gd" id="1_fls4u"]
[ext_resource type="FontFile" uid="uid://bsi4q0ff6yrdo" path="res://assets/fonts/Xolonium-Regular.ttf" id="2_1etfg"]
[ext_resource type="PackedScene" uid="uid://diwlbglo7dxsn" path="res://scenes/game/Lives.tscn" id="3_1etfg"]
[ext_resource type="PackedScene" uid="uid://8kvj7docff4f" path="res://scenes/game/PauseMenu.tscn" id="4_7hsmw"]
[ext_resource type="PackedScene" uid="uid://dqkx4slx8fjmt" path="res://scenes/game/NewHighScore.tscn" id="5_2jm8r"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fls4u")

[node name="ScoreLabel" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_bottom = 78.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_1etfg")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1etfg")
theme_override_font_sizes/font_size = 64
text = "SHOOT THE MICROBES!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Countdown" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1etfg")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Lives" parent="." instance=ExtResource("3_1etfg")]

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="PauseMenu" parent="." instance=ExtResource("4_7hsmw")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.5
offset_top = -214.0
offset_right = 211.5
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewHighScore" parent="." instance=ExtResource("5_2jm8r")]
visible = false

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="resume" from="PauseMenu" to="." method="_on_resume"]
